@@ -12,6 +12,13 @@ project adheres to https://semver.org/[Semantic Versioning].
 
 toc::[]
 
+== {compare-url}/v0.5.1\...HEAD[Unreleased]
+
+=== Changed
+
+* Change the comment header to the format recommended by the REUSE
+  Specification ({pull-request-url}/23[#23])
+
 == {compare-url}/v0.5.0\...v0.5.1[0.5.1] - 2023-07-04
 
 === Changed
